<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.view.SettingFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="29dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/settingCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/constrain_layout_border"
            android:gravity="center">

            <TextView
                android:id="@+id/settingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textColor="@color/dark_blue"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/locationCardView"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/settingCardView">

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/location"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="9dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/locationCardView">

        <RadioGroup
            android:id="@+id/locationRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/gpsRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:text="@string/gps"
                android:textColor="@color/dark_blue" />

            <RadioButton
                android:id="@+id/mapRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:text="@string/map"
                android:textColor="@color/dark_blue" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/languageCardView"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintTop_toBottomOf="@id/settingCardView">

        <TextView
            android:id="@+id/languageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/language"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintTop_toBottomOf="@id/languageCardView">

        <RadioGroup
            android:id="@+id/languageRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/arabicRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:text="@string/arabic"
                android:textColor="@color/dark_blue" />

            <RadioButton
                android:id="@+id/englishRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:text="@string/english"
                android:textColor="@color/dark_blue" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/notificationCardView"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintTop_toBottomOf="@id/language">

        <TextView
            android:id="@+id/notificationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/notification"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/notification"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintTop_toBottomOf="@id/notificationCardView">

        <RadioGroup
            android:id="@+id/notificationRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/notificationRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:text="@string/notification"
                android:textColor="@color/dark_blue" />

            <RadioButton
                android:id="@+id/alertRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:text="@string/alert"
                android:textColor="@color/dark_blue" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/temperature"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/wind"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="273dp">

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/temperatureText"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/temperatureCardView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/temperature">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/celsiusRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:text="@string/celsius"
                android:textColor="@color/dark_blue" />

            <RadioButton
                android:id="@+id/kelvinRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:text="@string/kelvin"
                android:textColor="@color/dark_blue" />

            <RadioButton
                android:id="@+id/fahrenheitRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:text="@string/fahrenheit"
                android:textColor="@color/dark_blue" />
        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/windCardView"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/location"
        tools:layout_editor_absoluteX="228dp">

        <TextView
            android:id="@+id/windTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wind"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/wind"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/windCardView"
        tools:layout_editor_absoluteX="217dp">

        <RadioGroup
            android:id="@+id/windRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/msRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:text="@string/meter_sec"
                android:textColor="@color/dark_blue" />

            <RadioButton
                android:id="@+id/mhRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:text="@string/mile_hour"
                android:textColor="@color/dark_blue" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="29dp" />

</androidx.constraintlayout.widget.ConstraintLayout>