<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp"
    android:layout_marginBottom="12dp"
    android:layout_marginStart="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hourConstraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:alpha=".7"
        android:background="@color/blue">

        <TextView
            android:id="@+id/hourTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="56dp"
            android:layout_height="49dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/hourTextView"
            app:layout_constraintStart_toStartOf="@+id/hourTextView"
            app:layout_constraintTop_toBottomOf="@+id/hourTextView"
            app:srcCompat="@drawable/icon" />

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/temperature"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/oTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/temperatureTextView"
            app:layout_constraintTop_toTopOf="@+id/temperatureTextView" />

        <TextView
            android:id="@+id/unitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/c"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/oTextView"
            app:layout_constraintTop_toTopOf="@+id/oTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>