<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    app:cardCornerRadius="15dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/constrain_layout_border"
        android:gravity="center">

        <TextView
            android:id="@+id/initializationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/which_way_would_you_like"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/constrainLayout"
            app:layout_constraintTop_toTopOf="@id/constrainLayout"
            app:layout_constraintEnd_toEndOf="@id/constrainLayout" />

        <RadioGroup
            android:id="@+id/locationInitializationRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            app:layout_constraintEnd_toEndOf="@id/initializationTextView"
            app:layout_constraintStart_toStartOf="@id/initializationTextView"
            app:layout_constraintTop_toBottomOf="@id/initializationTextView"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/alertRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:text="@string/alert"
                android:textColor="@color/blue"
                android:layout_marginEnd="60dp"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/notifyRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:text="@string/notification"
                android:textColor="@color/blue"
                android:textSize="20sp"/>
        </RadioGroup>

        <Button
            android:id="@+id/okBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/constrain_layout_border"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/locationInitializationRadioGroup"
            app:layout_constraintStart_toStartOf="@id/locationInitializationRadioGroup"
            app:layout_constraintTop_toBottomOf="@id/locationInitializationRadioGroup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>