<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    app:cardCornerRadius="15dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/constrain_layout_border"
        android:gravity="center">

        <TextView
            android:id="@+id/deleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/delete_item"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/constrainLayout"
            app:layout_constraintTop_toTopOf="@id/constrainLayout"
            app:layout_constraintEnd_toEndOf="@id/constrainLayout" />

        <Button
            android:id="@+id/okBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:background="@drawable/constrain_layout_border"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deleteTextView" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/constrain_layout_border"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/okBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.831"
            app:layout_constraintStart_toEndOf="@+id/okBtn"
            app:layout_constraintTop_toTopOf="@+id/okBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>